--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,25 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/app_for_demostrating_the_picture_in_picture_mode_in_android"
+        android:layout_gravity="center"
+        android:gravity="center_horizontal|bottom"
+        android:textSize="25sp"
+        android:layout_weight="1"/>
+
+    <Button
+        android:id="@+id/enter_button"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center"
+        android:text="@string/enter_pip"
+        android:textSize="25sp"
+        android:background="#FFF"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
